opam-version: "2.0"
name: passe-unix-common
depends: [
	"astring"
	"cohttp" { < "2.0.0" & >= "1.2.0" }
	# I don't care about base64, but `cohttp` uses it so we need to carefully select
	# a version which doesn't clash with `extlib` (at least 2.x, but before 3.x)
	# See https://github.com/mirage/ocaml-base64/pull/25
	"base64" { <"3.0.0" & >="2.0.0" }
	"conf-python-3"
	"conf-git"
	"hex"
	"dune"
	"logs"
	"lwt" { >="3.1.0" }
	"lwt_react"
	"lwt_ppx"
	"mirage"
	"mirage-clock-unix" { >= "2.0.0" }
	"mirage-fs-unix" { >= "1.6.0" & < "1.7.0" }
	"mirage-types" { < "3.5.0" }
	"mirage-types-lwt" { < "3.5.0" }
	"ocamlfind"
	"ocamlbuild"
	# "opam-installer"
	"ounit"
	"ptime"
	"react"
	"rresult"
	"uri" { >="1.9.4" }
	"yojson" { <"1.6.0" }
]
depexts: [
	["gup"] {os-distribution = "nixos"}
]
