opam-version: "2.0"
name: "passe-common"
maintainer: "tim@gfxmonk.net"
synopsis: "Passe"
depends: [
	"astring"
	"cohttp"
	"base64"
	"conf-python-3"
	"conf-git"
	"hex"
	"dune"
	"logs"
	"lwt"
	"lwt_react"
	"lwt_ppx"
	"mirage"
	"mirage-clock-unix"
	"mirage-fs-unix"
	"mirage-types"
	"mirage-types-lwt"
	"ocamlfind"
	"ocamlbuild"
	"ounit"
	"ptime"
	"react"
	"rresult"
	"uri"
	"yojson"
]
depexts: [
	["gup"] {os-distribution = "nixos"}
]
