opam-version: "2.0"
name: "passe-common"
maintainer: "tim@gfxmonk.net"
synopsis: "Passe"
depends: [
	"astring"
	"cohttp"
	"base64"
	"conf-python-3"
	"conf-git"
	"hex"
	"dune"
	"logs"
	"lwt"
	"lwt_react"
	"lwt_ppx"
	"mirage"
	"mirage-clock-unix"
	"ocamlfind"
	"ocamlbuild"
	"ounit"
	"ptime"
	"react"
	"rresult"
	"tls-lwt"
	"uri"
	"yojson"
]
depexts: [
	["gup"] {os-distribution = "nixos"}
]
