opam-version: "2.0"
name: "passe-server"
maintainer: "tim@gfxmonk.net"
synopsis: "Passe"
build: [
	[make "server"]
]
depends: [
	"passe-common" { ="%{version}%" }
	"passe-unix-common" { ="%{version}%" }

	"conduit"
	"dns-lwt-unix"
	"js_of_ocaml"
	"nocrypto"
	"re"
	"safepass"
	"tcpip"
	"vdoml"
	"opam-installer" { build }
]
