opam-version: "2.0"
name: "passe-server"
maintainer: "tim@gfxmonk.net"
synopsis: "Passe"
build: [
	[make "server"]
]
depends: [
	"passe-common" { ="%{version}%" }
	"passe-unix-common" { ="%{version}%" }

	"conduit"
	"dns-client-lwt"
	"js_of_ocaml" { ="3.9.0" } # https://github.com/ocsigen/js_of_ocaml/pull/1279
	"js_of_ocaml-ppx"
	"mirage-crypto"
	"x509"
	"re"
	"safepass"
	"tcpip"
	"vdoml"
	"opam-installer" { build }
]
