; vim: set syntax=lisp commentstring=;\ %s:

(library
 (name passe_client)
 (flags
  (:include ../flags))
 (modules :standard \ main)
 (libraries passe passe_unix lwt_react lambda-term lwt extlib)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name main)
 (public_name passe)
 (package passe)
 (libraries passe_client)
 (modules main)
 (flags
  (:include ../flags)))
