; vim: set syntax=lisp commentstring=;\ %s:

(library
 (name passe_server)
 (flags
  (:include ../flags))
 (libraries
  extlib
  conduit-lwt-unix
  hex
  mirage-clock-unix
  mirage-crypto
  mirage-crypto-rng
  x509
  passe
  passe_unix
  ptime
  base64
  dns-client-lwt
  safepass)
 (modules :standard \ main)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name main)
 (public_name passe-server)
 (package passe-server)
 (libraries passe_server)
 (modules main)
 (flags
  (:include ../flags)))
