; vim: set syntax=lisp commentstring=;\ %s:

(executable
 (name main)
 (flags
  (:include ../flags))
 (libraries js_of_ocaml js_of_ocaml-lwt js_of_ocaml.weak passe lwt_react
   vdoml)
 (js_of_ocaml
  (flags :standard --source-map --pretty))
 (preprocess
  (pps lwt_ppx js_of_ocaml.ppx)))

(rule
 (targets about.ml)
 (deps (universe))
 (action
  (run gup -u %{targets})))

(rule
 (targets style.css)
 (deps style.less)
 (action
  (run gup -u %{targets})))

(rule
 (targets index.appcache)
 (deps style.less main.bc.js ../server/index.ml)
 (action
  (run gup -u %{targets})))

(rule
 (targets res.files)
 (deps (universe))
 (action
  (run gup -u %{targets})))

; see https://github.com/ocaml/dune/issues/256#issuecomment-361242074

(rule
 (targets dune-res.inc.gen)
 (action
  (run gup -u %{targets})))

(alias
 (name dune-res.inc)
 (action
  (diff dune-res.inc dune-res.inc.gen)))

(include dune-res.inc)

(alias
 (name all)
 (deps main.bc.js style.css index.appcache))

(install
 (package passe-server)
 (section share)
 (files main.bc.js index.appcache style.css))
