; vim: set syntax=lisp commentstring=;\ %s:

(executable
 (name main)
 (flags
  (:include ../flags))
 (libraries js_of_ocaml js_of_ocaml-lwt js_of_ocaml.weak passe lwt_react
   vdoml)
 (js_of_ocaml
  (flags :standard --source-map))
 (preprocess
  (pps lwt_ppx js_of_ocaml.ppx)))

(rule
 (targets about.ml)
 (deps (universe))
 (action
  (run gup -u %{targets})))

(rule
 (targets style.css)
 (deps style.less)
 (action
  (run gup -u %{targets})))

(rule
 (targets index.appcache)
 (deps
  (alias res)
  style.less
  main.bc.js
  ../server/index.ml)
 (action
  (run gup -u %{targets})))

(rule
 (targets dune-res.inc)
 (mode promote)
 (deps (universe))
 (action
   (run gup -u dune-res.inc)))


(include dune-res.inc)

(alias
  (name res)
  (deps (universe))
  (action
    (run gup -u ../../../../src/www/res/all)
  )
)

(alias
 (name all)
 (deps dune-res.inc main.bc.js style.css index.appcache))

(install
 (package passe-server)
 (section share)
 (files main.bc.js index.appcache style.css))
